--- a/about.html
+++ b/about.html
@@ -90,26 +90,9 @@ button,[type="button"],[type="reset"],[type="submit"]{-webkit-appearance:button}
     <div class="p-2 flex items-center w-full">
      <a class="flex-1" href="card.html" data-ancestor="true" aria-current="true"><img src="images/logo.png" class="w-12 h-12"></a>
     </div>
-    <!--<div class="max-auto mt-8 px-4 max-w-lg leading-8 text-gray-900 my-4 flex-col items-center justify-center">
-     <div class="text-lg text-gray-500">
-      互联网福利资源分享交流
-     </div>
-     <img src="images/wechat-account.png" class="my-4 max-w-xs rounded-lg">
-     <div class="text-lg text-gray-500">
-      获取识别码
-     </div>
-     <div class="my-4">
-      更新日期：2025年1月4日，添加上方微信获取(备注：识别码)
-     </div>
-     <div class="text-lg text-gray-500">
-      解锁VIP姿势
-     </div>
-     <div>
-      <div class="my-4">
-       更新日期：2025年1月4日，添加上方微信获取(备注：识别码)
-      </div>
-      <input class="shadow appearance-none border rounded w-full py-1 px-3 md:w-2/3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="lockCode" type="text" placeholder="输入识别码：000000">-->
-      <button type="button" class="bg-blue-500 hover:bg-blue-700 text-white font-bold my-4 px-4 rounded" onclick="unLockPositions()">解锁</button>
+      <div>是否已满18岁</div>
+      <button type="button" class="bg-blue-500 hover:bg-blue-700 text-white font-bold my-4 px-4 rounded" onclick="unLockPositions()">是</button>
+      <button type="button" class="bg-blue-500 hover:bg-blue-700 text-white font-bold my-4 px-4 rounded" onclick="rt()">否</button>
     </div>
     </div>
    </div>
