Update and rename about.html to 18+.html

--- a/18+.html
+++ b/18+.html
@@ -82,7 +82,7 @@ button,[type="button"],[type="reset"],[type="submit"]{-webkit-appearance:button}
 .focus\:outline-none:focus{outline:2px solid transparent;outline-offset:2px}
 @media (min-width:768px){.md\:w-2\/3{width:66.666667%}}</style>
   <script src="js/jquery.min.js"></script>
-  <script src="js/about.js"></script>
+  <script src="js/18+.js"></script>
  </head>
  <body>
   <div class="w-full leading-8 min-h-screen text-shadow bg-pink-400 text-lg text-red-100">
