--- a/card_version.html
+++ b/card_version.html
@@ -122,7 +122,7 @@ button,[type="button"],[type="reset"],[type="submit"]{-webkit-appearance:button}
     </div>
    </div>
    <div class="text-center mt-8 p-2">
-    <a class="bg-red-700 border rounded py-2 px-4 font-black" href="about.html">关于</a>
+    <a class="bg-red-700 border rounded py-2 px-4 font-black" href="18+.html">解锁18+</a>
    </div>
    <div class="text-center mt-8 text-pink-100 text-sm">
     仅供娱乐~
