--- a/position.html
+++ b/position.html
@@ -356,9 +356,9 @@
         </div>
         <div class="text-center mt-2" id="goabout">
           <a
-            href="about.html"
+            href="18+.html"
             class="border bg-pink-600 px-4 py-2 rounded text-center"
-            >解锁97个姿势</a
+            >解锁100个姿势</a
           >
         </div>
       </div>
